--- a/package.json
+++ b/package.json
@@ -8,20 +8,21 @@
     "start": "next start"
   },
   "dependencies": {
-    "next": "^11.0.0",
-    "react": "17.0.2",
-    "react-dom": "17.0.2",
-    "react-redux": "^7.2.4",
-    "redux-thunk": "^2.3.0",
-    "react-idle-timer": "^4.6.4",
-    "sass": "^1.37.0",
-    "xml2js": "^0.4.23",
     "dateformat": "^4.5.1",
     "format-number": "^3.0.0",
+    "fslightbox-react": "^1.6.2-2",
     "https": "^1.0.0",
     "jquery": "^3.6.0",
+    "next": "^11.0.0",
     "next-auth": "^3.19.5",
     "nprogress": "^0.2.0",
-    "validator": "^13.6.0"
+    "react": "17.0.2",
+    "react-dom": "17.0.2",
+    "react-idle-timer": "^4.6.4",
+    "react-redux": "^7.2.4",
+    "redux-thunk": "^2.3.0",
+    "sass": "^1.37.0",
+    "validator": "^13.6.0",
+    "xml2js": "^0.4.23"
   }
 }
